--- a/style.css
+++ b/style.css
@@ -5,19 +5,17 @@
 :root {
   --bg: #f7f4f0;
   --text: #111;
-  /* --muted: #6b6b6b; */
   --font-heading: 'Inter', sans-serif;
   --font-sans-serif: 'IBM Plex Sans', sans-serif;
 }
 
 html, body {
-  margin: 0;
-  padding: 0 20px;       /* global padding on sides */
-  background: var(--bg);
-  color: var(--text);
+    margin: 0;
+    padding: 0 20px;
+    background: var(--bg);
+    color: var(--text);
     font-family: var(--font-sans-serif);
-  font-size: clamp(1.3rem, 2vw, 2rem);
-  overflow-x: hidden;
+    font-size: clamp(1.3rem, 2vw, 2rem);
 }
 
 body {
@@ -59,7 +57,6 @@ header p {
 /* Posts */
 .post {
   width: 100%;           /* fill the column */
-  padding: 20px;
   background: transparent;
   border-radius: 0;
   box-shadow: none;
