--- a/style.css
+++ b/style.css
@@ -14,8 +14,6 @@ html, body {
     padding: 0 20px;
     background: var(--bg);
     color: var(--text);
-    font-family: var(--font-sans-serif);
-    font-size: clamp(1.3rem, 2vw, 2rem);
 }
 
 body {
@@ -31,28 +29,29 @@ body {
 }
 
 /* Header - jumbo, left-aligned */
-header h1 {
+h1 {
   font-family: var(--font-heading);
   font-weight: 900;
-    font-size: clamp(1.5rem, 10vw, 10rem);
+    font-size: 4vw;
   letter-spacing: clamp(-0.05em, -0.5vw, -0.5rem);
   margin: 0;
 }
 
 
-header p {
-  font-size: 3vw;
-  color: var(--muted);
+p {
+  font-size: 2vw;
   margin-bottom: 30px;
   text-align: left;
+      font-family: var(--font-sans-serif);
+    /* font-size: clamp(1.3rem, 2vw, 2rem); */
 }
 
 /* Feed */
-/* .feed {
+.feed {
   display: flex;
   flex-direction: column;
-  gap: 60px;           
-} */
+  gap: 200px;           
+}
 
 /* Posts */
 .post {
@@ -81,7 +80,7 @@ header p {
 /* Caption & Date */
 .caption {
   margin-top: 16px;
-  font-size: 2.5vw;      /* huge, scales with viewport */
+  font-size: 2vw;      
   line-height: 1.2;
   text-align: left;
 }
@@ -92,7 +91,7 @@ header p {
 
 .date {
   margin-top: 4px;
-  font-size: 2vw;
+  font-size: 1.5vw;
   text-align: left;
 }
 
