style: h1 mobile size

--- a/style.css
+++ b/style.css
@@ -97,8 +97,8 @@ p {
 
 /* Mobile adjustments */
 @media (max-width: 640px) {
-  body { padding: 12px; overflow-x: hidden;}
-  header h1 { font-size: 14vw; }
+  body { padding: 12px;}
+  /* header h1 { font-size: 14vw; } */
   header p { font-size: 4vw; }
   .post { padding: 12px; }
   .caption { font-size: 4vw; }
