--- a/style.css
+++ b/style.css
@@ -96,13 +96,12 @@ p {
 }
 
 /* Mobile adjustments */
-@media (max-width: 640px) {
+/* @media (max-width: 640px) {
   body { padding: 12px;}
-  /* header h1 { font-size: 14vw; } */
   header p { font-size: 4vw; }
   .post { padding: 12px; }
   .caption { font-size: 4vw; }
   .date { font-size: 3vw; }
   .feed { gap: 40px; }
   .site { width: 100%; }
-}
+} */
