--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ html, body {
 }
 
 body {
-  padding-top: 20px;
+  padding-top: 1vw;
 }
 
 /* Container: full width, flush left */
@@ -32,18 +32,24 @@ body {
 h1 {
   font-family: var(--font-heading);
   font-weight: 900;
-    font-size: 6vw;
+  font-size: 6vw;
+  letter-spacing: clamp(-0.05em, -0.5vw, -0.5rem);
+  margin: 0;
+}
+
+h2 {
+  font-family: var(--font-heading);
+  font-weight: 900;
+  font-size: 3.5vw;
   letter-spacing: clamp(-0.05em, -0.5vw, -0.5rem);
   margin: 0;
 }
 
 
-p {
+header p {
   font-size: 3vw;
-  margin-bottom: 30px;
   text-align: left;
-      font-family: var(--font-sans-serif);
-    /* font-size: clamp(1.3rem, 2vw, 2rem); */
+  font-family: var(--font-sans-serif);
 }
 
 /* Feed */
@@ -73,17 +79,15 @@ p {
   height: auto;
   display: block;
   border-radius: 0;
-  margin: 10px 0;        /* vertical breathing room */
   padding: 0;
 }
 
 /* Caption & Date */
 .caption {
-  margin-top: 16px;
-  margin-bottom: 16px;
+  padding-top: 1vw;
   font-size: 2.5vw;      
-  line-height: 1.2;
   text-align: left;
+  padding-bottom: 1vw;
 }
 
 .nobr {
@@ -91,18 +95,15 @@ p {
 }
 
 .date {
-  margin-top: 4px;
   font-size: 2vw;
   text-align: left;
 }
 
 /* Mobile adjustments */
-/* @media (max-width: 640px) {
-  body { padding: 12px;}
-  header p { font-size: 4vw; }
-  .post { padding: 12px; }
-  .caption { font-size: 4vw; }
-  .date { font-size: 3vw; }
-  .feed { gap: 40px; }
-  .site { width: 100%; }
-} */
+@media (max-width: 640px) {
+  h1 { font-size: 8vw;}
+  h2 { font-size: 4vw;}
+  header p { font-size: 3.2vw; }
+  .caption { font-size: 3vw; }
+  .date { font-size: 2.5vw; }
+}
