--- a/style.css
+++ b/style.css
@@ -45,9 +45,23 @@ h2 {
   margin: 0;
 }
 
+a {
+  color: inherit;
+  transition: transform 0.2s ease, color 0.2s ease;
+  display: inline-block;  
+}
+
+a:hover {
+  color: rgb(3, 66, 255);
+  transform: skewX(-5deg);         
+}
+
+a :visited {
+  color: inherit;
+}
 
 header p {
-  font-size: 3vw;
+  font-size: 2.5vw;
   text-align: left;
   font-family: var(--font-sans-serif);
 }
@@ -85,7 +99,7 @@ header p {
 /* Caption & Date */
 .caption {
   padding-top: 1vw;
-  font-size: 2.5vw;      
+  font-size: 2vw;      
   text-align: left;
   padding-bottom: 1vw;
 }
@@ -95,7 +109,7 @@ header p {
 }
 
 .date {
-  font-size: 2vw;
+  font-size: 1.5vw;
   text-align: left;
 }
 
